--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
 
 <section id="about">
   <h2>自己紹介</h2>
-  <p>編集中。</p>
+  <p>編集中</p>
 </section>
 
 <section id="research">
   <h2>研究内容</h2>
-  <p>編集中。</p>
+  <p>編集中</p>
 </section>
 
 <section id="publications">
   <h2>論文・発表</h2>
   <ul>
-    <p> orcid: https://orcid.org/0000-0002-9924-9978 </p>
+    <p> orcid: <a href="">https://orcid.org/0000-0002-9924-9978</a> </p>
+    <p> researchmap: <a href="">https://researchmap.jp/tomohiko_oka</a> </p>
     <!-- <li>[論文タイトル], [著者], [ジャーナル], [年]. <a href="">link</a></li> -->
     <!-- <li>[国際会議発表], [著者], [会議名], [年].</li> -->
   </ul>
@@ -59,8 +60,8 @@
 
 <section id="contact">
   <h2>連絡先</h2>
-  <p>Email: <span>[your-email@example.com]</span></p>
-  <p>GitHub: <a href="https://github.com/[username]">[toka2024]</a></p>
+  <!--<p>Email: <span>[your-email@example.com]</span></p>-->
+  <p>GitHub: <a href="https://github.com/[toka2024]">[toka2024]</a></p>
 </section>
 
 <footer style="margin-top: 40px; font-size: 0.9em; color:#666;">
@@ -68,4 +69,3 @@
 </footer>
 </body>
 </html>
-
