--- a/index.html
+++ b/index.html
@@ -41,16 +41,20 @@
 <section id="about">
   <h2>自己紹介</h2>
   <p>編集中</p>
+  <p>宇宙物理学の研究を行っています。</p>
 </section>
 
 <section id="research">
   <h2>研究内容</h2>
   <p>編集中</p>
+  <p>現在の研究テーマ、および、参加しているプロジェクトなどを紹介します。</p>
 </section>
 
 <section id="publications">
   <h2>論文・発表</h2>
   <ul>
+    <p> 編集中 </p>
+    <p> 論文や講演についてまとめています。 </p>
     <p> orcid: <a href="">https://orcid.org/0000-0002-9924-9978</a> </p>
     <p> researchmap: <a href="">https://researchmap.jp/tomohiko_oka</a> </p>
     <!-- <li>[論文タイトル], [著者], [ジャーナル], [年]. <a href="">link</a></li> -->
