--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   <ul>
     <p> 編集中 </p>
     <p> 論文や講演についてまとめています。 </p>
-    <p> orcid: <a href="">https://orcid.org/0000-0002-9924-9978</a> </p>
-    <p> researchmap: <a href="">https://researchmap.jp/tomohiko_oka</a> </p>
+    <p> orcid: <a href="https://orcid.org/0000-0002-9924-9978">0000-0002-9924-9978</a> </p>
+    <p> researchmap: <a href="https://researchmap.jp/tomohiko_oka">link</a> </p>
     <!-- <li>[論文タイトル], [著者], [ジャーナル], [年]. <a href="">link</a></li> -->
     <!-- <li>[国際会議発表], [著者], [会議名], [年].</li> -->
   </ul>
