--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <header>
-  <h1>Tomohiko Oka</h1>
+  <h1>岡 知彦 (Tomohiko Oka)</h1>
   <p>[所属] / [研究領域]</p>
   <nav>
     <a href="#about">自己紹介</a>
@@ -54,7 +54,7 @@
   <h2>論文・発表</h2>
   <ul>
     <p> 編集中 </p>
-    <p> 論文や講演についてまとめています。 </p>
+    <p> 論文や講演についてまとめています。</p>
     <p> orcid: <a href="https://orcid.org/0000-0002-9924-9978">0000-0002-9924-9978</a> </p>
     <p> researchmap: <a href="https://researchmap.jp/tomohiko_oka">link</a> </p>
     <!-- <li>[論文タイトル], [著者], [ジャーナル], [年]. <a href="">link</a></li> -->
@@ -65,7 +65,7 @@
 <section id="contact">
   <h2>連絡先</h2>
   <!--<p>Email: <span>[your-email@example.com]</span></p>-->
-  <p>GitHub: <a href="https://github.com/[toka2024]">[toka2024]</a></p>
+  <p>GitHub: <a href="https://github.com/toka2024">[toka2024]</a></p>
 </section>
 
 <footer style="margin-top: 40px; font-size: 0.9em; color:#666;">
